Removed unneeded app

--- a/applications/PCFieldSplit/CMakeLists.txt
+++ b/applications/PCFieldSplit/CMakeLists.txt
@@ -8,8 +8,8 @@ get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 # Steady-state Poisson, No Field Split - BEGIN
 # all these are very very sim
-ADD_SUBDIRECTORY(00_poisson_ex40_1/)  #@todo, some runtime error
-ADD_SUBDIRECTORY(00_poisson_ex40_2/)  #@todo, some runtime error
+ADD_SUBDIRECTORY(00_poisson_ex40_1/)  #@todo, ASM runtime error
+ADD_SUBDIRECTORY(00_poisson_ex40_2/)  #@todo, ASM runtime error
 ADD_SUBDIRECTORY(00_poisson_ex41/)
 ADD_SUBDIRECTORY(00_poisson_ex42/)
 ADD_SUBDIRECTORY(00_poisson_ex43/)
@@ -17,12 +17,10 @@ ADD_SUBDIRECTORY(00_poisson_ex43/)
 
 
 # Steady-state NS - BEGIN
-# all these are very very sim
 
 # No Field Split - BEGIN
-ADD_SUBDIRECTORY(ex12/)  # square                        #@todo, some runtime error
-ADD_SUBDIRECTORY(ex44/)  # with pressure stabilization   #@todo, some runtime error
-ADD_SUBDIRECTORY(ex44_ns_pcd/)  # only initialized
+ADD_SUBDIRECTORY(ex12/)  # square                        #@todo, ASM runtime error
+ADD_SUBDIRECTORY(ex44/)  # with pressure stabilization   #@todo, ASM runtime error
 # No Field Split - END
 
 # Field Split - BEGIN
@@ -37,17 +35,17 @@ ADD_SUBDIRECTORY(ex14/)  # square
 
 # Steady-state Boussinesq  - BEGIN
 
-# Steady-state Boussinesq, Field Split  - BEGIN
+# Field Split  - BEGIN
 ADD_SUBDIRECTORY(ex1/)     # square
 ADD_SUBDIRECTORY(ex10/)    # square
 ADD_SUBDIRECTORY(ex11/)    # square
 ADD_SUBDIRECTORY(ex11_1/)  # square
 ADD_SUBDIRECTORY(ex11_2/)  # square16
-# Steady-state Boussinesq, Field Split  - END
+# Field Split  - END
 
-# Steady-state Boussinesq, No Field Split - BEGIN
+# No Field Split - BEGIN
 ADD_SUBDIRECTORY(ex46/)    # cube   # extension of ex44
-# Steady-state Boussinesq, No Field Split - END
+# No Field Split - END
 
 # Steady-state Boussinesq  - END
 
