--- a/applications/AMR/CMakeLists.txt
+++ b/applications/AMR/CMakeLists.txt
@@ -2,6 +2,10 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
+
+#all Poisson
+
+
 ADD_SUBDIRECTORY(ex1/)
 
 ADD_SUBDIRECTORY(ex2/)
