--- a/applications/MGAMR/CMakeLists.txt
+++ b/applications/MGAMR/CMakeLists.txt
@@ -4,7 +4,7 @@ get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 ADD_SUBDIRECTORY(ex1/) #no eqn
 ADD_SUBDIRECTORY(ex2/) #Boussinesq
-ADD_SUBDIRECTORY(ex3/) #NS
+ADD_SUBDIRECTORY(ex3/) #NS (assemble from library now)
 ADD_SUBDIRECTORY(ex4/) #Poisson
 ADD_SUBDIRECTORY(ex5/) #Poisson
 ADD_SUBDIRECTORY(ex6/) #Poisson
