--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -116,8 +116,9 @@ IF(BUILD_NAVIERSTOKESAPPS)
   # Steady Stokes
   ADD_SUBDIRECTORY(${NS_FOLDER}/SteadyStokes/)
 
-  # Steady Navier Stokes steady
-  ADD_SUBDIRECTORY(${NS_FOLDER}/NavierStokesTemp_AMR/)
+  set(NSTEMP_FOLDER 004_Boussinesq/)
+  # Steady Boussinesq
+  ADD_SUBDIRECTORY(${NSTEMP_FOLDER}/NavierStokesTemp_AMR/)
   unset(NS_FOLDER)
 ENDIF(BUILD_NAVIERSTOKESAPPS)
 
