--- a/applications/000_tutorial/CMakeLists.txt
+++ b/applications/000_tutorial/CMakeLists.txt
@@ -4,6 +4,7 @@ get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)
 
 
 ADD_SUBDIRECTORY(ex01_function_approximation_no_eqn/)
+ADD_SUBDIRECTORY(ex01_function_approximation_no_eqn_amr/)
 
 ADD_SUBDIRECTORY(ex02_poisson_a_all_dims_dir_neu/)
 ADD_SUBDIRECTORY(ex02_poisson_a_all_dims_dir_neu_multiple_domains/)
@@ -23,6 +24,7 @@ ADD_SUBDIRECTORY(ex06b_navier_stokes/)
 
 ADD_SUBDIRECTORY(ex08_boussinesq/)
 ADD_SUBDIRECTORY(ex08_boussinesq_amr/)
+ADD_SUBDIRECTORY(ex08_boussinesq_amr_2/)
 
 ADD_SUBDIRECTORY(ex20_time_dependent/)
 
