uncoupled bihar; added app for multiple domains

--- a/applications/zzz_sandbox/Karthik/CMakeLists.txt
+++ b/applications/zzz_sandbox/Karthik/CMakeLists.txt
@@ -7,4 +7,4 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
   ADD_SUBDIRECTORY(./coupled_biharmonic/)
   ADD_SUBDIRECTORY(./uncoupled_biharmonic/)
   ADD_SUBDIRECTORY(./coupled_biharmonic_multiple/)
-
+ ADD_SUBDIRECTORY(./uncoupled_biharmonic_multiple_domains_sol/)
